# worker-placement-game

./: .gitignore  CLAUDE.md  README.md  SETUP.md  play.bat  pyproject.toml  speckit_cheat_sheet.md  speckit_cheatsheet.md  test_card_scaling.py
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
card-generator/: buildings_table.py  generate_cards.py
client/: game_window.py  main.py  network_client.py  user_config.py
client/ui/: board_renderer.py  card_renderer.py  dialogs.py  game_log.py  resource_bar.py  tabbed_panel.py
client/views/: game_view.py  lobby_view.py  menu_view.py  results_view.py
config/: board.json  buildings.json  contracts.json  game_rules.json  intrigue.json  producers.json
my-project/.specify/: init-options.json
server/: config_loader.py  game_engine.py  game_state.py  lobby.py  main.py  network.py
server/models/: config.py  game.py
shared/: card_models.py  constants.py  messages.py
specs/: building-mapping-analysis.md  building_reference.csv  plot-quest-genre-bonus.md  waterdeep-card-mapping.md  waterdeep_analysis.csv
specs/001-worker-placement-game/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-garage-quest-display/: data-model.md  plan.md  quickstart.md  research.md  (+2 more)
tests/: test_buildings.py  test_cards.py  test_copy_occupied_space.py  test_end_game.py  test_resource_choice.py  test_resource_triggers.py  test_special_buildings.py
tools/: list_quests.py
(+146 files in other folders)
