[project]
name = "worker-placement-game"
version = "0.1.0"
description = "Multiplayer worker placement board game with a music industry theme"
requires-python = ">=3.12"
dependencies = [
    "arcade==4.0.0.dev4",
    "websockets>=12.0",
    "pydantic>=2.0",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["client*", "server*", "shared*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
